# dora-nis2-crosswalk-mcp

./: .cursorrules  .gitignore  .mcp.json  README.md  SECURITY.md  __init__.py  acp.json  attestation.py  dora-nis2-crosswalk.mcpb  glama.json  llms.txt  manifest.json  mcp_promo.py  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
