[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dora-nis2-crosswalk-mcp"
version = "1.1.4"
description = "DORA × NIS2 Crosswalk MCP — map Regulation (EU) 2022/2554 obligations to Directive (EU) 2022/2555 Article 21-23 measures, and vice versa. For EU banks, insurers, payment institutions, crypto-asset service providers, and their CTPPs (critical ICT third-party providers). Dual-compliance scoring + HMAC-signed attestations. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["mcp", "dora", "nis2", "crosswalk", "dual-compliance", "eu-banking", "eu-insurance", "ctpp", "regulation-2022-2554", "directive-2022-2555", "financial-services-compliance", "incident-reporting", "signed-attestation", "meok-ai-labs"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Office/Business :: Financial"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai/dora-nis2-crosswalk-mcp"
Repository = "https://github.com/CSOAI-ORG/dora-nis2-crosswalk-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
dora-nis2-crosswalk-mcp = "server:main"
